@@ -1,3 +1,11 @@
+2010-04-08  Colin Watson  <cjwatson@ubuntu.com>
+
+	* util/grub.d/10_linux.in: Only use the first word of
+	GRUB_DISTRIBUTOR for --class, to avoid problems if somebody puts
+	spaces in GRUB_DISTRIBUTOR.
+	* util/grub.d/10_kfreebsd.in: Likewise.
+	* util/grub.d/10_hurd.in: Likewise.
+
 2010-04-06  BVK Chaitanya  <bvk.groups@gmail.com>
 
 	Fix unit testing framework for Qemu 0.12.
